--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
       
       border: 0
     }
+    
+    .donation-close {
+      width: 13px;
+      height: 16px;
+      padding: 0;
+      position: absolute;
+      top: 28px;
+      right: 19px;
+      z-index: 5000;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -54,19 +65,23 @@
   <div class="container">
     <h1>Express Checkout with PayPal Giving Fund Demo</h1>
     <p>To get started, click the button below.</p>
-    <input type="button" value="Donate $1" class="btn btn-success" onclick="initDonation()">
+    <input type="button" value="Donate $1" class="btn btn-success" onclick="showDonation()">
   </div>
 
-  <div class="donation-overlay responsive-overlay">
+  <div class="donation-overlay responsive-overlay" onclick="hideDonation()">
     <div class="donation-container">
+      <div class="donation-close" onclick="hideDonation()"></div>
       <iframe src="/donate-form.html"></iframe>
     </div>
   </div>
 
   <script src="http://code.jquery.com/jquery-3.0.0.min.js"></script>
   <script type="text/javascript">
-    function initDonation() {
+    function showDonation() {
       $('.donation-overlay').show();
+    }
+    function hideDonation() {
+      $('.donation-overlay').hide();
     }
   </script>
 
